--- a/contentwidget.ui
+++ b/contentwidget.ui
@@ -25,68 +25,107 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QTableWidget" name="tableWidget">
+  <widget class="QWidget" name="contentWindow" native="true">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>50</y>
+     <y>10</y>
      <width>751</width>
-     <height>511</height>
+     <height>551</height>
     </rect>
    </property>
-   <column>
-    <property name="text">
-     <string> </string>
+   <widget class="QWidget" name="tableWindow" native="true">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>50</y>
+      <width>741</width>
+      <height>481</height>
+     </rect>
     </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>歌曲名</string>
+    <widget class="QTableWidget" name="tableWidget">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>20</y>
+       <width>741</width>
+       <height>491</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QHeaderView                    // QTableWidget 标题头整个区域
+{
+    background:rgba(255,255,255,128);        // 整个标题头区域背景色
+}
+background-color:rgba(255,255,255,128)
+
+QScrollBar::handle:vertical        // 垂直滚动条 handle
+{
+    background: rgba(255,255,255,20%); // 垂直滚动条 handle 的背景色
+    border: 0px solid grey;            // 垂直滚动条 handle 边框
+    border-radius:3px;                 // 垂直滚动条 handle 圆角
+    width: 8px;                        // 垂直滚动条 handle 宽度
+}</string>
+     </property>
+     <column>
+      <property name="text">
+       <string/>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>歌曲名</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>歌手</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>专辑</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>时长</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>大小</string>
+      </property>
+     </column>
+    </widget>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
     </property>
-   </column>
-   <column>
     <property name="text">
-     <string>歌手</string>
+     <string>播放全部</string>
     </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>专辑</string>
+   </widget>
+   <widget class="QTextEdit" name="textEdit">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>10</y>
+      <width>211</width>
+      <height>29</height>
+     </rect>
     </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>时长</string>
+    <property name="styleSheet">
+     <string notr="true">font: 9pt &quot;Microsoft YaHei UI&quot;;
+border-image: url(:/background/resource/background/blue_transparent.png);</string>
     </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>大小</string>
-    </property>
-   </column>
-  </widget>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>10</y>
-     <width>93</width>
-     <height>28</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>播放全部</string>
-   </property>
-  </widget>
-  <widget class="QTextEdit" name="textEdit">
-   <property name="geometry">
-    <rect>
-     <x>550</x>
-     <y>10</y>
-     <width>211</width>
-     <height>31</height>
-    </rect>
-   </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
